--- a/gradution.ipynb
+++ b/gradution.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "gradution.ipynb",
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "13o6TPaMxSQKLhyRo68qintAVg2TsTCNU",
+      "authorship_tag": "ABX9TyNp64/+GO854wZp7U6EbNVr",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +20,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/omarahmed93/graduation-project/blob/main/gradution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
